# Estudos_Python2

./: Estudo API - Atalho.lnk  README.md  atividades.db  atividades.db-journal
Classes/: 01_classes.py  02_classes.py  03_classes.py  04_classes.py  05_classes.py  07_getter_setter_C.py  08_agregacao.py  08_composicao.py  09_exercicio.py  B10_classes.py  teste.py
Estudando_Classes/: 06_classes.py  08_agregacao.py  A10_classes.py
Estudo API/apiTwitter/: main.py  pyproject.toml  secrets.py
Estudo API/busca perto Api/: requirements.txt
Estudo API/sitebusca/: forms.py  main.py
Flask/: a01_flask.py  app.py  app_restful.py  dev_api.py
Flask/Api_sqlachemy/: app.py
Flask/env/: pyvenv.cfg
Projetos_Python/HackerRank/: Find_the_Runner_Up_Score.py  Finding _he_percentage.py  loop.py  string_validator.py
Projetos_Python/HacketRank/: README.MD  loop.py  swap_CaSe.py
Projetos_Python/jogo_da_forca/: READM.md  bdPALAVRAS.txt  jogo_da_forca.py
Projetos_Python/sistetema_bancario_simplificado/: README.md  sistema_bancario_v3.py
Projetos_Python/validacao_cpf/: README.md  validar_cpf.py
Segurança_informação/: host.txt  pingmultiplo.py  pingsimplespy
Segurança_informação/ClienteTCP/: clienteTCP.py
Segurança_informação/ClienteUDP/: clienteUDP.py  servidorUDP.py
Segurança_informação/ThreadseIPs/: ips.py  threds.py
Segurança_informação/WebScrapng/: ws.py
Segurança_informação/comparadordeHashs/: b.txt  ch.py
Segurança_informação/geradoresdeSenhas/: gs.py
Segurança_informação/ocultarfiles/: ocultador.py
TokensJWT/: main.py
instance/: banco.bd
(+50 files in other folders)
