[tool.poetry]
name = "estudos-python2"
version = "1.0.0"
description = ""
authors = ["Daniel Castilho <danielcastilhodiniz@gmail.com>"]
readme = "README.md"
packages = [{include = "estudos_python2"}]

[tool.poetry.dependencies]
python = "^3.11"
pymono = "^1.0.3"
tweepy = "^4.14.0"
fastapi = "^0.98.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
Flask = "^2.3.2"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
